feat(bringup): import basic logic from old application

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BROWSER=false
 PORT=8081
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_DHIS2_BASE_URL=https://play.dhis2.org/2.30
+REACT_APP_DHIS2_BASE_URL=https://extranet.who.int/dhis2-dev
+REACT_APP_VERSION=$npm_package_version
